--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        padding-block-end: 50px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -138,7 +139,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        > Coded by <a href="#">Your Name Here</a>.
+        > Coded by <a href="mailto:lukmanoladokun86@gmail.com" target="_blank">Lukman Oladokun</a>.
       </div>
     </footer>
     
